--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,4 @@
 {
   "extends": ["next/core-web-vitals", "next/typescript"],
-  "rules": { "@typescript-eslint/no-empty-object-type": "off" }
+  "rules": { "@typescript-eslint/no-empty-object-type": "off", "no-unused-vars": "off","@typescript-eslint/no-unused-vars": "off", }
 }
